refactor class name